# monarch-api-cli

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
skills/monarch-finance-ops/: SKILL.md
skills/monarch-finance-ops/agents/: openai.yaml
skills/monarch-finance-ops/references/: cli-recipes.md
src/monarch_cli/: __init__.py  builders.py  commands.py  main.py  parser.py  runtime.py  style.py  summaries.py
tests/: test_cli_filters.py
